--- a/angular17/src/app/peliculas/peliculas.component.html
+++ b/angular17/src/app/peliculas/peliculas.component.html
@@ -1,7 +1,12 @@
 <!-- peliculas.component.html -->
-<div *ngFor="let pelicula of peliculas">
-    <h3>{{ pelicula.title }}</h3>
-    <p>{{ pelicula.overview }}</p>
-    <img [src]="'https://image.tmdb.org/t/p/w500/'+pelicula.backdrop_path" class="d-block w-100" alt="Movie Poster">
-    <!-- Agrega más campos según la estructura de tus datos -->
+<div class="row">
+  <div class="col-md-4 mb-4" *ngFor="let pelicula of peliculas">
+    <div class="card">
+      <img [src]="'https://image.tmdb.org/t/p/w500/'+pelicula.backdrop_path" class="card-img-top" alt="Movie Poster">
+      <div class="card-body">
+        <h5 class="card-title">{{ pelicula.title }}</h5>
+        <p class="card-text">{{ pelicula.overview.substring(0, 200) + '...' }}</p>
+      </div>
+    </div>
   </div>
+</div>
