--- a/angular17/src/app/navbar/navbar.component.html
+++ b/angular17/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/watchlist">watchlist</a>
+            <a class="nav-link" [routerLink]="watchlist">watchlist</a>
           </li>
           
         </ul>
