--- a/angular17/src/app/peliculas/peliculas.component.html
+++ b/angular17/src/app/peliculas/peliculas.component.html
@@ -1,4 +1,3 @@
-<!-- Lista de peliculas de la pagina principal-->
 <div class="row">
   <div class="col-md-4 mb-4" *ngFor="let pelicula of peliculas">
     <div class="card">
@@ -6,9 +5,8 @@
       <div class="card-body">
         <h5 class="card-title">{{ pelicula.title }}</h5>
         <p class="card-text">{{ pelicula.overview.substring(0, 200) + '...' }}</p>
-        <a [routerLink]="['/pelicula', pelicula.id]" >Detalles</a>
+        <a [routerLink]="['/detalles/', pelicula.id]">Detalles</a>
 
-        
       </div>
     </div>
   </div>
