--- a/angular17/src/app/peliculas/peliculas.component.html
+++ b/angular17/src/app/peliculas/peliculas.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-4 mb-4" *ngFor="let pelicula of peliculas">
     <div class="card">
-      <img [src]="'https://image.tmdb.org/t/p/w500/'+pelicula.backdrop_path" class="card-img-top" alt="Movie Poster">
+      <img [src]="'https://image.tmdb.org/t/p/w500/'+pelicula.backdrop_path" class="card-img-top" alt="Movie Poster" (click)="verDetallesPelicula(pelicula.id)">
       <div class="card-body">
         <h5 class="card-title">{{ pelicula.title }}</h5>
         <p class="card-text">{{ pelicula.overview.substring(0, 200) + '...' }}</p>
-        <a [routerLink]="['/detalles/', pelicula.id]">Detalles</a>
+        <a [routerLink]="['/detalles', pelicula.id]">Detalles</a>
 
       </div>
     </div>
