--- a/angular17/src/app/app.component.html
+++ b/angular17/src/app/app.component.html
@@ -1,6 +1,4 @@
-
-
-<!-- navbar.component.html -->
+<!--app.component.html-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -12,7 +10,7 @@
         
     </ul>
     <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm" (keyup)="search()">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
     </div>
