--- a/angular17/src/app/app.component.html
+++ b/angular17/src/app/app.component.html
@@ -9,10 +9,11 @@
 
         
     </ul>
-    <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm" (keyup)="search()">
+    <form class="d-flex" (submit)="search()">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
+    
     </div>
 </div>
 </nav>
