--- a/angular17/src/app/login/login.component.html
+++ b/angular17/src/app/login/login.component.html
@@ -1,13 +1,25 @@
-<form [formGroup]="myForm" (ngSubmit)="saveData()">
-    <div>
-        <label>Nombre</label>
-        <input formControlName="nombre" type="text"/>
-        <p *ngIf="myForm.get('nombre')!.touched && myForm.get('nombre')!.hasError('required')">El campo es obligatorio</p>
+<p>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#formCollapse" aria-expanded="false" aria-controls="formCollapse">
+    Identifícate
+    </button>
+</p>
+<div style="min-height: 120px;">
+    <div class="collapse collapse-horizontal" id="formCollapse">
+        <div class="card card-body" style="width: 100%;">
+            <!-- Formulario de Login -->
+            <form [formGroup]="myForm" (ngSubmit)="login()">
+                <div>
+                    <label>Nombre</label>
+                    <input formControlName="username" type="text"/>
+                    <p *ngIf="myForm.get('username')!.touched && myForm.get('username')!.hasError('required')">El campo es obligatorio</p>
+                </div>
+                <div>
+                    <label>Contraseña</label>
+                    <input formControlName="password" type="password" />
+                    <p *ngIf="myForm.get('password')!.touched && myForm.get('password')!.hasError('required')">El campo es obligatorio</p>
+                </div>
+                <button type="submit" [disabled]="myForm.invalid">Login</button>
+            </form>
+        </div>
     </div>
-    <div>
-        <label>Contraseña</label>
-        <input formControlName="contrasenha" type="password" />
-        <p *ngIf="myForm.get('contrasenha')!.touched && myForm.get('contrasenha')!.hasError('required')">El campo es obligatorio</p>
-    </div>
-    <button type="submit" [disabled]="myForm.invalid">Login</button>
-</form>
+</div>
