--- a/angular17/src/app/app.component.html
+++ b/angular17/src/app/app.component.html
@@ -6,7 +6,9 @@
         <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-
+        <li class="nav-item">
+            <a routerLink="/watchlist">Watchlist</a>
+        </li>
         
     </ul>
     <form class="d-flex" (ngSubmit)="search()" #searchForm="ngForm">
