--- a/angular17/src/app/watchlist/watchlist.component.html
+++ b/angular17/src/app/watchlist/watchlist.component.html
@@ -1,14 +1,18 @@
-<p>watchlist works!</p>
+<h1>Películas pendientes</h1>
 <div class="row">
-    <div class="col-md-4 mb-4" *ngFor="let pelicula of peliculas">
-      <div class="card">
-        <img [src]="'https://image.tmdb.org/t/p/w500/'+pelicula.backdrop_path" class="card-img-top" alt="Movie Poster">
-        <div class="card-body">
-          <h5 class="card-title">{{ pelicula.title }}</h5>
-          <p class="card-text">{{ pelicula.overview.substring(0, 200) + '...' }}</p>
-          
+  <div *ngFor="let movie of movies" class="col-md-4 mb-4">
+    <div class="card-hover-wrapper" (click)="elegirPeli(movie)">
+      <a [href]="'/Detalles/' + movie.id" class="card-link">
+        <div class="card">
+          <img [src]="getMovieImageUrl(movie.poster_path)" class="card-img-top" alt="Movie Poster">
+          <div class="card-body">
+            <h5 class="card-title">{{ movie.title }}</h5>
+            <span>Idioma original: {{ movie.original_language }}</span><br>
+            <span>{{ movie.overview.substring(0, 200) + '...' }}</span>
+          </div>
         </div>
-      </div>
+      </a>
+      <button class="btn-delete" (click.stop)="borrarPelicula(movie.id)">Eliminar</button>
     </div>
   </div>
-  
+</div>
