--- a/angular17/src/app/registro/registro.component.html
+++ b/angular17/src/app/registro/registro.component.html
@@ -1,13 +1,27 @@
-<form [formGroup]="registroForm" (ngSubmit)="onSubmit()">
-    <input formControlName="username" placeholder="Nombre de usuario">
-    <input formControlName="email" placeholder="Email">
-    <input type="password" formControlName="password1" placeholder="Contraseña">
-    <input type="password" formControlName="password2" placeholder="Confirmar Contraseña">
-    <select formControlName="rol">
-      <option value="">Selecciona un rol</option>
-      <option value="USU">Usuario</option>
-      <option value="USU_PREMIUM">Usuario Premium</option>
-    </select>
-    <button type="submit" [disabled]="registroForm.invalid">Registrar</button>
+<div class="register">
+  <form class="custom-form" method="post">
+    <h1>Register</h1>
+    <input
+      type="email"
+      [(ngModel)]="email"
+      name="email"
+      placeholder="Email"
+      required="required"
+    />
+    <input
+      type="password"
+      [(ngModel)]="password"
+      name="password"
+      placeholder="Password"
+      required="required"
+    />
+    <input
+      type="password"
+      [(ngModel)]="confirmPassword"
+      name="password"
+      placeholder="Repeat the password"
+      required="required"
+    />
+    <button type="submit" (click)="register()">Register</button>
   </form>
-  
+</div>
